--- a/css/main.css
+++ b/css/main.css
@@ -434,6 +434,15 @@ h3.heading.ui-content {
     margin-top: 70px;
 }
 
+.error {
+    display: block;
+    margin: auto;
+    text-align: center;
+    width: 100%;
+    margin-top: 70px;
+}
+
+
 .loader-gif {
     width: 60%;
 }
@@ -844,6 +853,9 @@ span.payment-lable-name {
     .loader {
         margin-top: 92px;
     }
+    .error {
+        margin-top: 92px;
+    }
     .search {
         margin-top: 92px;
     }
@@ -856,6 +868,17 @@ span.payment-lable-name {
     .front-page-slides {
         width: 100%;
         height: 300px;
+    }
+    .products-item {
+        display: grid;
+        grid-gap: 5rem;
+        grid-template-columns: 30% 40%;
+    }
+    .single-product {
+        margin-top: 50px;
+    }
+    .single-product-margin {
+        margin-top: 50px !important;
     }
 }
 
@@ -914,6 +937,9 @@ span.payment-lable-name {
     .loader {
         margin-top: 210px;
     }
+    .error {
+        margin-top: 210px;
+    }
     .search {
         margin-top: 210px;
     }
@@ -924,12 +950,39 @@ span.payment-lable-name {
         width: 100%;
         height: 200px;
     }
+    .products-item {
+        display: grid;
+        grid-template-columns: 40% 60%;
+    }
+    .single-product-margin {
+        margin-top: 50px !important;
+    }
 }
 
 
 /*Iphone Landscape*/
 
 @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
+
+
+    .prev{
+        top: 48% !important;
+    }
+    .next{
+        top: 48% !important;
+        margin-right: 489px !important;
+    }
+    .prd-image {
+        width: 207% !important;
+        margin-left: -77px !important;
+    }
+
+    img.order-product.product-image-items-display {
+        width: 125% !important;
+        margin-left: -19px;
+        margin-top: 21px;
+    }
+
     img.register.Ipad-logo-size.logo-image {
         width: 50%;
     }
@@ -1029,7 +1082,7 @@ span.payment-lable-name {
         margin-right: 0px;
     }
     .order-item-image {
-        width: 30% !important;
+        width: 22% !important;
     }
     .order-item-text {
         width: 66% !important;
@@ -1039,6 +1092,9 @@ span.payment-lable-name {
         height: 48px;
     }
     .loader {
+        margin-top: 0px;
+    }
+    .error {
         margin-top: 0px;
     }
     .search {
