--- a/css/ar.css
+++ b/css/ar.css
@@ -1,32 +1,32 @@
 .speech-bubble {
-	position: absolute;
-	width: 80%;
-	margin: 0 auto;
-	bottom: 50px;
-	right: 10px;
-	left: 10px;
+    position: absolute;
+    width: 80%;
+    margin: 0 auto;
+    bottom: 50px;
+    right: 10px;
+    left: 10px;
     min-height: 20%;
-	background: #004431;
-	color: #0f4;
-	font-size: 28px;
+    background: #004431;
+    color: #0f4;
+    font-size: 28px;
     border-radius: .4em;
-	padding: 20px;
+    padding: 20px;
     display: none;
 }
 
 .speech-bubble:after {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	width: 0;
-	height: 0;
-	border: 50px solid transparent;
-	border-top-color: #004431;
-	border-bottom: 0;
-	border-left: 0;
-	margin-left: -50px;
-	margin-bottom: -50px;
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: 50px solid transparent;
+    border-top-color: #004431;
+    border-bottom: 0;
+    border-left: 0;
+    margin-left: -50px;
+    margin-bottom: -50px;
 }
 
 #arjsDebugUIContainer {
@@ -34,5 +34,36 @@
 }
 
 .a-enter-vr {
-	display: none;
+    display: none;
+}
+
+.notification {
+    position: absolute;
+    width: 80%;
+    margin: 0 auto;
+    bottom: 0px;
+    right: 10px;
+    left: 10px;
+    min-height: 20%;
+    background: #004431;
+    color: #0f4;
+    font-size: 28px;
+    border-radius: .4em;
+    padding: 20px;
+    display: none;
+}
+
+.notification:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: 50px solid transparent;
+    border-top-color: #004431;
+    border-bottom: 0;
+    border-left: 0;
+    margin-left: -50px;
+    margin-bottom: -50px;
 }
