--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /* @font-face{
 src: url(..//Resources/Fonts/Nexa light.otf);
 } */
+
 @font-face {
     font-family: nexa-light;
     src: url(../Resources/Fonts/NexaLight.otf);
@@ -11,11 +12,15 @@ src: url(..//Resources/Fonts/Nexa light.otf);
     src: url(../Resources/Fonts/NexaBold.otf);
 }
 
-h1,h2,h3,h4{
-    font-family: nexa-bold !important;;
+h1,
+h2,
+h3,
+h4 {
+    font-family: nexa-bold !important;
+    ;
 }
 
-p{
+p {
     font-family: nexa-light !important;
 }
 
@@ -88,7 +93,7 @@ input {
     display: none;
 }
 
-#btn-checkout{
+#btn-checkout {
     position: fixed;
     bottom: 3%;
     width: 95% !important;
@@ -98,9 +103,10 @@ input {
     background: none;
 }
 
-.coupons{
+.coupons {
     max-width: 65% !important;
 }
+
 
 /*Sheen css ends*/
 
@@ -480,7 +486,7 @@ h3.heading.ui-content {
 }
 
 .pr-card {
-    height: 300px;
+    height: 340px;
     width: 350px;
     margin-top: 20px;
     margin-left: 9%;
@@ -822,7 +828,7 @@ div#filter-popup {
 }
 
 .promotion-views-two-slides-boom-work {
-    width: 36%;
+    width: 32%;
 }
 
 .promotion-card {
@@ -967,7 +973,7 @@ img.leaderboard-image {
     }
     .pr-card {
         height: 310px;
-        width: 77%;
+        width: 75%;
         margin-top: 20px;
         margin-left: 20px;
     }
@@ -1090,7 +1096,7 @@ img.leaderboard-image {
     }
     .pr-card {
         height: 310px;
-        width: 57%;
+        width: 55%;
         margin-top: 20px;
         margin-left: 20px;
     }
@@ -1306,7 +1312,7 @@ img.leaderboard-image {
     .btn-camera img {
         padding-right: 0px;
     }
-    .coupons{
+    .coupons {
         max-width: 39% !important;
     }
 }
