--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,16 @@ input {
     max-width: 65% !important;
 }
 
+.dashboard-flexbox {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+}
+.dashboard-item {
+    margin-left: 7px !important;
+    flex: 0 0 auto;
+}
+
 
 /*Sheen css ends*/
 
@@ -646,6 +656,7 @@ p.comment-description.single-product.price {
     background: #d9d9d987;
     padding: 10px;
     border-radius: 12px;
+    margin: 10px 0px;
 }
 
 .product.ui-content {
@@ -1314,5 +1325,41 @@ img.leaderboard-image {
     }
     .coupons {
         max-width: 39% !important;
+    }
+}
+
+
+
+/*X Port*/
+
+@media only screen
+and (min-device-width : 375px)
+and (max-device-width : 812px)
+and (-webkit-device-pixel-ratio : 3)
+and (orientation : portrait) {
+
+    .item {
+        width: 160px;
+        height: 177px;
+    }
+}
+
+/*X Land*/
+@media only screen
+and (min-device-width : 375px)
+and (max-device-width : 812px)
+and (-webkit-device-pixel-ratio : 3)
+and (orientation : landscape) {
+    .item {
+        margin-left: 24px;
+        margin-bottom: 30px;
+    }
+    .item{
+        margin: 13px;
+        background: #6060602e;
+        border-radius: 20px;
+        width: 175px;
+        height: 187px;
+
     }
 }
