--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ input {
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
+    padding-bottom: 10px;
 }
 .dashboard-item {
     margin-left: 7px !important;
