--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,7 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: nexa-bold !important;
-    ;
+    font-family: nexa-bold !important;;
 }
 
 p {
@@ -36,7 +35,6 @@ p {
 input {
     color: #000 !important;
 }
-
 
 /*Sheen css*/
 
@@ -113,11 +111,11 @@ input {
     overflow-x: auto;
     padding-bottom: 10px;
 }
+
 .dashboard-item {
     margin-left: 7px !important;
     flex: 0 0 auto;
 }
-
 
 /*Sheen css ends*/
 
@@ -373,14 +371,16 @@ a.second-nav-header-radius.ui-link.ui-btn {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1px;
+    padding-bottom: 14px;
 }
 
 .item {
     margin: 13px;
     background: #6060602e;
     border-radius: 20px;
-    width: 180px;
-    height: 190px;
+    width: 160px;
+    height: 177px;
+
 }
 
 img.category-image-items-display {
@@ -500,7 +500,7 @@ h3.heading.ui-content {
     height: 340px;
     width: 350px;
     margin-top: 20px;
-    margin-left: 9%;
+    margin-left: 12px;
 }
 
 .promotion-text {
@@ -511,7 +511,6 @@ img.loading-page-logo {
     width: 100% !important;
     margin-top: 140px !important;
 }
-
 
 /*ipad potrait*/
 
@@ -793,7 +792,7 @@ p.user-point.float-price {
 }
 
 img.promotion-card-image {
-    max-width: 310px;
+    max-width: 351px;
     border-radius: 10%;
 }
 
@@ -845,6 +844,9 @@ div#filter-popup {
 
 .promotion-card {
     border-radius: 20px;
+}
+
+.padding-20{
     padding: 20px;
 }
 
@@ -869,7 +871,6 @@ img.leaderboard-image {
     max-width: 100%;
 }
 
-
 /*Start of media queries/
 /*Ipad Landcaoe*/
 
@@ -878,148 +879,189 @@ img.leaderboard-image {
         width: 50%;
         margin-bottom: -41px;
     }
+
     .login.ui-content {
         width: 50% !important;
     }
+
     .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
         padding-left: 250px;
     }
+
     p.UserNavigation.User-Profile-Edit.Register-Account-Text {
         padding-right: 250px;
     }
+
     ul.Profile-Navigation-List.ui-listview {
         margin: 0em;
         margin-top: 40px;
         margin-bottom: 40px;
     }
+
     iframe#gmap_canvas {
         width: 510px;
     }
+
     p.About-Us.Register-Account-Text {
         padding-right: 260px;
     }
+
     img.Ipad-logo-size.logo-image {
         width: 60%;
         margin-bottom: -41px;
     }
+
     .login.ui-content {
         width: 50% !important;
     }
+
     .w3-content {
         max-width: 800px;
     }
+
     .product-details-container {
         width: 100%;
     }
+
     .main {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
     }
+
     .item {
         margin-left: 35px;
         margin-bottom: 30px;
     }
+
     .w3-content {
         max-width: 850px;
     }
+
     .product-details-container {
         width: 100%;
     }
+
     .single-product-background.w3-content.w3-display-container {
         padding: 70px !important;
     }
+
     .single-product.price {
         font-size: 20px;
     }
+
     .order-item-image {
         width: 25% !important;
     }
+
     .order-item-text {
         width: 74% !important;
     }
+
     img.Ipad-logo-size.logo-image {
         width: 60%;
         margin-bottom: -41px;
     }
+
     .login.ui-content {
         width: 50% !important;
     }
+
     .loader-gif {
         width: 30%;
     }
+
     .loader {
         margin-top: 92px;
     }
+
     .error {
         margin-top: 92px;
     }
+
     .search {
         margin-top: 92px;
     }
+
     button.checkout-button-std-sht.login-button.ui-btn.ui-btn-inline.rounded-button {
         width: 98% !important;
     }
+
     .leaderboard-participants.ui-content {
         width: 65% !important;
     }
+
     .front-page-slides {
         width: 100%;
         height: 300px;
     }
+
     .products-item {
         display: grid;
         grid-gap: 1rem;
         grid-template-columns: 40% 56%;
     }
+
     .single-product {
         margin-top: 50px;
     }
+
     .single-product-margin {
         margin-top: 0px !important;
     }
+
     .quantity-label {
         line-height: 18px !important;
     }
+
     button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
         margin-top: 0px;
     }
+
     .pr-card {
         height: 310px;
         width: 75%;
         margin-top: 20px;
         margin-left: 20px;
     }
+
     img.promotion-card-image {
-        max-width: 310px;
+        max-width: 347px;
+        height: 224px;
         border-radius: 25px;
     }
+
     .promotion-views-two-slides {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 1rem;
     }
+
     .promotion-views-two-slides-boom-work {
         width: 68%;
     }
+
     .promotion-card {
         border-radius: 20px;
-        padding: 20px;
+        padding: 0px!important;
     }
+
     .sunflower {
         margin-top: 26px;
     }
+
     img.review-rating-star {
         width: 60%;
     }
+
     .review-rating-star-legends {
         width: 22%;
     }
+
     img.leaderboard-image {
         /* max-width: 101%; */
         width: 100%;
     }
 }
-
 
 /*Ipad Potrait*/
 
@@ -1028,174 +1070,222 @@ img.leaderboard-image {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
+
     .item {
         margin-left: 35px;
         margin-bottom: 30px;
     }
+
     .w3-content {
         max-width: 820px;
     }
+
     .product-details-container {
         width: 100%;
     }
+
     .order-item-image {
         width: 31% !important;
     }
+
     .order-item-text {
         width: 68% !important;
     }
+
     img.register.Ipad-logo-size.logo-image {
         width: 65%;
     }
+
     img.Ipad-logo-size.logo-image {
         width: 65%;
     }
+
     iframe#gmap_canvas {
         width: 890px;
     }
+
     p.About-Us.Register-Account-Text {
         padding-right: 60px !important;
         margin-top: 30px !important;
     }
+
     p.UserNavigation.User-Profile-Edit.Register-Account-Text {
         padding-right: 80px !important;
     }
+
     .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
         padding-left: 80px !important;
     }
+
     h1.header-title.ui-title {
         font-size: 35px !important;
     }
+
     .header-class.ui-header.ui-bar-inherit {
         height: 54px;
     }
+
     .loader-gif {
         width: 40%;
     }
+
     .loader {
         margin-top: 210px;
     }
+
     .error {
         margin-top: 210px;
     }
+
     .search {
         margin-top: 210px;
     }
+
     .leaderboard-participants.ui-content {
         width: 70% !important;
     }
+
     .front-page-slides {
         width: 100%;
         height: 200px;
     }
+
     .products-item {
         display: grid;
         grid-template-columns: 40% 60%;
         grid-gap: 1rem;
     }
+
     .single-product-margin {
         margin-top: 0px !important;
     }
+
     .single-product {
         font-size: 20px !important;
         margin-top: 10px;
     }
+
     button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
         margin-top: 0px;
     }
+
     .quantity-label {
         line-height: 18px !important;
     }
+
     .pr-card {
         height: 310px;
         width: 55%;
         margin-top: 20px;
         margin-left: 20px;
     }
+
     img.promotion-card-image {
         max-width: 310px;
         border-radius: 25px;
     }
+
     .promotion-views-two-slides {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 1rem;
     }
+
     .promotion-views-two-slides-boom-work {
         width: 40%;
     }
+
     .promotion-card {
         border-radius: 20px;
         padding: 20px;
     }
+
     .sunflower {
         margin-top: 26px;
     }
+
     img.review-rating-star {
         width: 62%;
     }
+
     .review-rating-star-legends {
         width: 26%;
     }
+
     .btn-camera img {
         padding-right: 0px;
     }
 }
 
-
 /*Iphone Landscape*/
 
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
+    .header-grid {
+        grid-template-columns: 11% 66% 12% 11% !important;
+    }
+
     .prev {
         top: 48% !important;
     }
+
     .next {
         top: 48% !important;
-        margin-right: 489px !important;
     }
+
     .prd-image {
         width: 207% !important;
         margin-left: -77px !important;
     }
+
     img.order-product.product-image-items-display {
         width: 125% !important;
         margin-left: -19px;
         margin-top: 21px;
     }
+
     img.register.Ipad-logo-size.logo-image {
         width: 50%;
     }
+
     .login.ui-content {
         width: 60% !important;
     }
+
     img.Ipad-logo-size.logo-image {
         width: 50%;
         margin-bottom: -40px !important;
         margin-top: -40px;
     }
+
     img.forgot-password.Ipad-logo-size.logo-image {
         width: 50%;
         margin-bottom: -40px !important;
         margin-top: -40px !important;
     }
+
     iframe#gmap_canvas {
         width: 480px;
     }
+
     p.About-Us.Register-Account-Text {
         padding-right: 125px !important;
         margin-top: 30px !important;
     }
+
     p.UserNavigation.User-Profile-Edit.Register-Account-Text {
         padding-right: 145px !important;
     }
+
     .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
         padding-left: 145px !important;
     }
+
     ul.Profile-Navigation-List.ui-listview {
         margin: 0em;
         margin-top: 20px !important;
         margin-bottom: 15px !important;
     }
+
     .header-class {
         top: -3px;
         left: 0px;
@@ -1203,53 +1293,71 @@ img.leaderboard-image {
         overflow: hidden;
         height: 15%;
     }
+
     .main {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
+
     .item {
-        margin-left: 30px;
+        margin-left: 13px;
         margin-bottom: 30px;
+        background: #6060602e;
+        border-radius: 20px;
+        width: 177px;
+        height: 194px;
     }
+
     .w3-content {
         max-width: 850px;
     }
+
     .product-details-container {
         width: 100%;
     }
+
     .products-item {
         display: grid;
         grid-template-columns: 40% 60%;
     }
+
     .single-product {
         font-size: 14px !important;
-        margin-top: 30px;
+        margin-top: 50px;
     }
+
     .single-product-background {
-        width: 57%;
-        height: 158px;
+        width: 44%;
+        height: 113px;
     }
+
     .navbar-header.ui-navbar {
         margin-top: 46px;
     }
+
     img.single-product.product-popup-icon {
         width: 14px;
         margin-left: 0px;
         margin-right: 0px;
         margin-top: 2px;
     }
+
     .review-title {
         padding: 10px;
     }
+
     .review-comment {
         padding: 5px;
     }
+
     .minus-icon {
         margin-top: -8px !important;
     }
+
     .plus-icon {
         margin-top: -8px !important;
     }
+
     .price {
         display: inline-block;
         font-size: 14px;
@@ -1257,110 +1365,295 @@ img.leaderboard-image {
         font-weight: 100;
         margin-top: 0px !important;
     }
+
     button.single-product-page.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
         margin-right: 0px;
     }
+
     .order-item-image {
         width: 22% !important;
     }
+
     .order-item-text {
         width: 66% !important;
         padding-left: 10px;
     }
+
     .header-class.ui-header.ui-bar-inherit {
         height: 48px;
     }
+
     .loader {
         margin-top: 0px;
     }
+
     .error {
         margin-top: 0px;
     }
+
     .search {
-        margin-top: 0px;
+        margin-top: -23px;
     }
+
     .loader-gif {
         width: 22%;
     }
+
     .leaderboard-participants.ui-content {
         width: 70% !important;
     }
+
     .front-page-slides {
         width: 100%;
         height: 245px;
     }
+
     img.loading-page-logo {
         width: 100% !important;
         margin-top: 0px !important;
     }
+
     .main-promotions {
         display: grid;
         grid-template-columns: 100% !important;
     }
+
     .pr-card {
         height: 300px;
         width: 90%;
         margin-top: 10px;
         margin-left: 5%;
     }
+
     .promotion-views-two-slides {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 1rem;
     }
+
     .promotion-views-two-slides-boom-work {
         width: 30%;
     }
+
     .promotion-card {
         border-radius: 20px;
         padding: 20px;
     }
+
     img.review-rating-star {
         width: 50%;
     }
+
     .review-rating-star-legends {
         width: 26%;
     }
+
     .btn-camera img {
         padding-right: 0px;
     }
+
     .coupons {
         max-width: 39% !important;
     }
+
+
+    .add-tocart-btn {
+        width: 62%  !important;
+        display: block  !important;
+        margin: auto !important;
+    }
+    img.single-product.product-popup-icon {
+        margin-top: 8px !important;
+    }
 }
 
+@media only screen
+and (min-device-width: 375px)
+and (max-device-width: 667px)
+and (orientation: portrait) {
+    .item {
+        height: 183px;
+        width: 170px;
+        margin-left: 7px;
+    }
+}
+
+@media only screen
+and (min-device-width: 375px)
+and (max-device-width: 667px)
+and (orientation: landscape) {
+    .header-grid {
+        grid-template-columns: 11% 66% 12% 11% !important;
+    }
+
+    .main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .item {
+        width: 178px;
+        height: 188px;
+        margin-left: 22px;
+        margin-bottom: 30px;
+    }
+
+    .search {
+        margin-top: -23px;
+    }
+
+    .loader-gif {
+        width: 23%;
+    }
+
+    .add-tocart-btn {
+        width: 62%  !important;
+        display: block  !important;
+        margin: auto !important;
+    }
+    img.single-product.product-popup-icon {
+        margin-top: 15px !important;
+        width: 14px;
+    }
+    img.single-product.product-popup-icon {
+        margin-right: -1px;
+    }
 
 
-/*!*X Port*!*/
+    .product-details-container {
+        width: 100%;
+    }
 
-/*@media only screen*/
-/*and (min-device-width : 375px)*/
-/*and (max-device-width : 812px)*/
-/*and (-webkit-device-pixel-ratio : 3)*/
-/*and (orientation : portrait) {*/
+    .products-item {
+        display: grid;
+        grid-template-columns: 40% 60%;
+    }
 
-    /*.item {*/
-        /*width: 160px;*/
-        /*height: 177px;*/
-    /*}*/
-/*}*/
+    .single-product {
+        font-size: 14px !important;
+        margin-top: 43px;
+    }
 
-/*!*X Land*!*/
-/*@media only screen*/
-/*and (min-device-width : 375px)*/
-/*and (max-device-width : 812px)*/
-/*and (-webkit-device-pixel-ratio : 3)*/
-/*and (orientation : landscape) {*/
-    /*.item {*/
-        /*margin-left: 24px;*/
-        /*margin-bottom: 30px;*/
-    /*}*/
-    /*.item{*/
-        /*margin: 13px;*/
-        /*background: #6060602e;*/
-        /*border-radius: 20px;*/
-        /*width: 175px;*/
-        /*height: 187px;*/
+    .single-product-background {
+        width: 57%;
+        height: 113px;
+    }
 
-    /*}*/
-/*}*/
+    .prd-image-ld{
+        width: 188% !important;
+        margin-left: -44px;
+        margin-top: 13px;
+    }
+    .price {
+        display: inline-block;
+        font-size: 14px;
+        line-height: 1px;
+        font-weight: 100;
+        margin-top: 12px !important;
+    }
+
+    button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
+        margin-top: -10px;
+    }
+
+    .pr-card {
+        height: 310px;
+        width: 50%;
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+
+    img.promotion-card-image {
+        max-width: 251px;
+        border-radius: 25px;
+        height: 175px;
+    }
+
+    .promotion-views-two-slides {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1rem;
+    }
+
+    .promotion-views-two-slides-boom-work {
+        width: 32%;
+    }
+
+    .promotion-card {
+        border-radius: 20px;
+        padding: 0px;
+    }
+}
+
+/*X Port*/
+
+@media only screen
+and (min-device-width: 414px)
+and (max-device-width: 736px)
+and (-webkit-device-pixel-ratio: 3)
+and (orientation: portrait) {
+
+    .item {
+        width: 180px;
+        height: 190px;
+
+        margin: 13px;
+        background: #6060602e;
+    }
+    .pr-card {
+        margin-left: 31px;
+    }
+}
+
+/*X Land*/
+@media only screen
+and (min-device-width: 414px)
+and (max-device-width: 736px)
+and (-webkit-device-pixel-ratio: 3)
+and (orientation: landscape) {
+    img.promotion-card-image {
+        height: 201px;
+        max-width: 295px;
+        border-radius: 10%;
+    }
+    .promotion-card {
+        border-radius: 20px;
+         padding: 0px;
+    }
+    .header-grid {
+        grid-template-columns: 11% 66% 12% 11% !important;
+    }
+
+    .main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .item {
+
+        margin-left: 30px;
+        margin-bottom: 30px;
+    }
+    .single-product-background {
+        width: 57%;
+        height: 158px;
+    }
+
+    .single-product {
+        font-size: 14px !important;
+        margin-top: 46px;
+    }
+
+    .add-tocart-btn {
+        width: 62%  !important;
+        display: block  !important;
+        margin: auto !important;
+    }
+    img.single-product.product-popup-icon {
+        margin-top: 8px !important;
+    }
+
+    button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
+        margin-top: -15px !important;
+    }
+}
